--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -51,9 +51,7 @@ import { SuLogo } from '../atoms/SuLogo';
         <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 md:gap-8">
           <div class="hidden xl:block"></div>
           <div class="mt-12 md:mt-0 order-4 xl:order-1">
-            <h3 id="footer-studentska-unie" class="text-sm font-semibold text-stone-500 tracking-wider uppercase">
-              Projekty
-            </h3>
+            <h3 id="footer-projekty" class="text-sm font-semibold text-stone-500 tracking-wider uppercase">Projekty</h3>
             <div class="mt-4 text-stone-600">Již brzy</div>
           </div>
           <div class="mt-12 md:mt-0 xl:order-2">
