--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,8 +29,8 @@ const metaTags = {
         něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.
       </p>
       <div class="flex justify-start md:justify-center items-center pt-8 gap-4">
-        <Button type="link" href="/o-nas" variant="gray" size="lg" text="O nás" />
         <Button type="link" href="/kontakt" variant="primary" size="lg" text="Kontakt" />
+        <Button type="link" href="/projekty" variant="gray" size="lg" text="Projekty" />
       </div>
     </Container>
     <div class="relative pt-16 sm:pt-20 md:pt-24 pb-8 sm:pb-12 md:pb-16">
