Photos update, footer links

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ import H1 from '../components/atoms/H1.astro';
 const metaTags = {
   title: 'Studentská unie UTB',
   description:
-    'Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, našim posláním je dělat život ve Zlíně o něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.',
+    'Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, naším posláním je dělat život ve Zlíně o něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.',
   image: '/meta-image-404.jpg',
 };
 ---
