--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -41,23 +41,23 @@ const people = [
     image: hruskovaImage,
   },
   {
-    name: 'Kateřina Sedlačiková',
+    name: 'Nataly Nagel',
     role: 'Tajemnice',
-    email: 'sedlacikova@sutb.cz',
+    email: 'nagel@sutb.cz',
     image: sedlacikovaImage,
-  },
-  {
-    name: 'Martina Matulíková',
-    role: 'HR',
-    email: 'matulikova@sutb.cz',
-
-    image: matulikovaImage,
   },
   {
     name: 'Antonie Bystroňová',
     role: 'HR',
     email: 'bystronova@sutb.cz',
     image: bystronovaImage,
+  },
+  {
+    name: 'Tina Marečková',
+    role: 'HR',
+    email: 'mareckova@sutb.cz',
+
+    image: matulikovaImage,
   },
 ];
 ---
