--- a/src/pages/o-nas.astro
+++ b/src/pages/o-nas.astro
@@ -12,7 +12,7 @@ import SudxImage from '../images/o-nas/sudx.jpg';
 const metaTags = {
   title: 'O nás | Studentská unie UTB',
   description:
-    'Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, našim posláním je dělat život ve Zlíně o něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost. V praxi to znamená, že vytváříme velké množství nejrůznějších aktivit.',
+    'Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, naším posláním je dělat život ve Zlíně o něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost. V praxi to znamená, že vytváříme velké množství nejrůznějších aktivit.',
   image: '/meta-image-o-nas.jpg',
 };
 ---
@@ -33,7 +33,7 @@ const metaTags = {
         class="sm:text-lg lg:text-xl pt-6 text-stone-700 tracking-wide leading-relaxed sm:leading-relaxed lg:leading-relaxed"
       >
         Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě
-        a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, našim posláním je dělat život ve Zlíně o
+        a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, naším posláním je dělat život ve Zlíně o
         něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost. V praxi to znamená, že vytváříme velké
         množství nejrůznějších aktivit.
       </p>
