--- a/src/pages/pridej-se-k-nam.astro
+++ b/src/pages/pridej-se-k-nam.astro
@@ -74,9 +74,9 @@ const metaTags = {
         >
           <span class="font-bold text-2xl">V</span>e Studentské unii ti nabízíme možnost získání zkušeností, praxe,
           kontaktů a hlavně spousty kámošů. Můžeš se podílet na reálných projektech s rozpočtem až čtvrt milionu, můžeš
-          vést 40ti členný tým a být zodpovědný za hladký průběh celé akce. Můžeš se tedy například rozvíjet v oblastech
+          vést 40členný tým a být zodpovědný za hladký průběh celé akce. Můžeš se tedy například rozvíjet v oblastech
           komunikace, managementu, marketingu, finančního řízení, účetnictví, ale i v uměleckých oborech jako je
-          audiovize, grafika, produkce aj. Nevíš co z toho by si mohl dělat? To vůbec nevadí, my jsme taky nevěděli,
+          audiovize, grafika, produkce aj. Nevíš co z toho by jsi mohl dělat? To vůbec nevadí, my jsme taky nevěděli,
           důležité je rozhodnutí, že NĚCO dělat chceš.
         </p>
       </div>
@@ -86,8 +86,8 @@ const metaTags = {
         <p
           class="sm:text-lg lg:text-xl text-stone-700 leading-loose sm:leading-loose lg:leading-loose tracking-wide order-2 md:order-1 px-2"
         >
-          <span class="font-bold text-2xl">A</span>le to je moc pěkný povídání, o tom žádné, jenže řada z nás šla do SU
-          potkat partu fajn lidí, s kterýma se bude pravidelně bavit, podnikat spoustu aktivit od polštářové bitvy, přes
+          <span class="font-bold text-2xl">A</span>le to je moc pěkné povídání, o tom žádné, jenže řada z nás šla do SU
+          potkat partu fajn lidí, s kterými se bude pravidelně bavit, podnikat spoustu aktivit od polštářové bitvy, přes
           vánoční večírek naruby až po víceméně pravidelnou hospodskou schůzi. Nemluvě o teambuildingových aktivitách,
           víkendech na chatě atd. Navíc k tomu získáš kopu skvělých zkušeností a díky kámošům kolem tebe ti Zlín nikdy
           nebude cizí.
