--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -52,18 +52,48 @@ import { SuLogo } from '../atoms/SuLogo';
           <div class="hidden xl:block"></div>
           <div class="mt-12 md:mt-0 order-4 xl:order-1">
             <h3 id="footer-projekty" class="text-sm font-semibold text-stone-500 tracking-wider uppercase">Projekty</h3>
-            <div class="mt-4 text-stone-600">Již brzy</div>
+            <nav aria-labelledby="footer-projekty" class="mt-4 space-y-4 text-stone-600 flex flex-col">
+              <a
+                href="https://www.seznamovak.utb.cz/"
+                target="_blank"
+                rel="noopener noreferrer external"
+                class="hover:text-primary-600 transition duration-300"
+              >
+                Seznamovák
+              </a>
+              <a
+                href="https://www.ples.utb.cz/"
+                target="_blank"
+                rel="noopener noreferrer external"
+                class="hover:text-primary-600 transition duration-300"
+              >
+                Reprezentační ples
+              </a>
+              <a
+                href="https://www.majales.utb.cz/"
+                target="_blank"
+                rel="noopener noreferrer external"
+                class="hover:text-primary-600 transition duration-300"
+              >
+                Majáles
+              </a>
+              <a
+                href="/projekty"
+                  class="hover:text-primary-600 transition duration-300"
+              >
+                ...a mnoho dalších
+              </a>
+            </nav>
           </div>
           <div class="mt-12 md:mt-0 xl:order-2">
             <h3 id="footer-studentska-unie" class="text-sm font-semibold text-stone-500 tracking-wider uppercase">
               Studentská Unie
             </h3>
             <nav aria-labelledby="footer-studentska-unie" class="mt-4 space-y-4 text-stone-600 flex flex-col">
-              <a href="/o-nas" class="hover:text-primary-600 transition duration-300"> O nás</a>
+              <a href="/o-nas" class="hover:text-primary-600 transition duration-300">O nás</a>
               <a href="/pridej-se-k-nam" class="hover:text-primary-600 transition duration-300">Přidej se k nám</a>
               <a href="/kontakt" class="hover:text-primary-600 transition duration-300">Kontakt</a>
-              <a href="/files/stanovy-SU-UTB.pdf" class="hover:text-primary-600 transition duration-300">
-                Stanovy unie</a
+              <a href="/files/stanovy-SU-UTB.pdf" class="hover:text-primary-600 transition duration-300">Stanovy unie</a
               >
             </nav>
           </div>
@@ -76,8 +106,8 @@ import { SuLogo } from '../atoms/SuLogo';
                 href="https://www.dropbox.com/sh/51qauayq1k7igq6/AAAznMWvYwv5wxA6ZAW79DGra?dl=0"
                 class="hover:text-primary-600 transition duration-300"
               >
-                Press kit</a
-              >
+                Press kit
+              </a>
               <a
                 href="https://pruvodcestudenta.utb.cz/"
                 target="_blank"
@@ -86,8 +116,7 @@ import { SuLogo } from '../atoms/SuLogo';
               >
                 Průvodce studenta
               </a>
-              <a href="/files/stanovy-SU-UTB.pdf" class="hover:text-primary-600 transition duration-300">
-                Stanovy unie</a
+              <a href="/files/stanovy-SU-UTB.pdf" class="hover:text-primary-600 transition duration-300">Stanovy unie</a
               >
               <a
                 href="https://mapa.utb.cz/"
@@ -110,10 +139,10 @@ import { SuLogo } from '../atoms/SuLogo';
         </div>
       </div>
     </div>
-    <div class="mt-12 border-t border-stone-200 pt-8">
-      <p class="text-base text-black/50 tracking-wide xl:text-center">
-        &copy; 2022 - {new Date().getFullYear()} Studentská unie UTB, všechna práva vyhrazena.
-      </p>
-    </div>
+  </div>
+  <div class="mt-12 border-t border-stone-200 pt-8">
+    <p class="text-base text-black/50 tracking-wide xl:text-center">
+      &copy; 2022 - {new Date().getFullYear()} Studentská unie UTB, všechna práva vyhrazena.
+    </p>
   </div>
 </footer>
