--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import UniverzitaTomaseBatiImage from '../images/home/univerzita-tomase-bati.png
 const metaTags = {
   title: 'Studentská unie UTB',
   description:
-    'Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, našim posláním je dělat život ve Zlíně o něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.',
+    'Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, naším posláním je dělat život ve Zlíně o něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.',
 };
 ---
 
@@ -25,7 +25,7 @@ const metaTags = {
         class="sm:text-lg md:text-xl pt-4 md:pt-6 text-stone-700 tracking-wide leading-relaxed max-w-4xl mx-auto text-left md:text-center md:leading-relaxed"
       >
         Studentská unie UTB je nestátní nezisková organizace. Fungujeme od roku 2005, jsme zcela nezávislí na univerzitě
-        a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, našim posláním je dělat život ve Zlíně o
+        a všichni jsme dobrovolníci. Jak se můžete dočíst v našich stanovách, naším posláním je dělat život ve Zlíně o
         něco příjemnější - pro studenty, zaměstnance UTB i pro veřejnost.
       </p>
       <div class="flex justify-start md:justify-center items-center pt-8 gap-4">
