--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -10,8 +10,10 @@ import bystronovaImage from '../images/kontakt/bystronova.webp';
 import hruskovaImage from '../images/kontakt/hruskova.webp';
 import kratochvilImage from '../images/kontakt/kratochvil.webp';
 import kubickovaImage from '../images/kontakt/kubickova.webp';
-import matulikovaImage from '../images/kontakt/matulikova.webp';
-import sedlacikovaImage from '../images/kontakt/sedlacikova.webp';
+//import matulikovaImage from '../images/kontakt/matulikova.webp';
+import mareckovaImage from '../images/kontakt/mareckova.webp';
+//import sedlacikovaImage from '../images/kontakt/sedlacikova.webp';
+import nagelImage from '../images/kontakt/nagel.webp';
 
 const metaTags = {
   title: 'Studentská unie UTB',
@@ -41,10 +43,10 @@ const people = [
     image: hruskovaImage,
   },
   {
-    name: 'Nataly Nagel',
+    name: 'Nataly Katerina Nagel',
     role: 'Tajemnice',
     email: 'nagel@sutb.cz',
-    image: sedlacikovaImage,
+    image: nagelImage,
   },
   {
     name: 'Antonie Bystroňová',
@@ -53,11 +55,10 @@ const people = [
     image: bystronovaImage,
   },
   {
-    name: 'Tina Marečková',
+    name: 'Kristina Marečková',
     role: 'HR',
     email: 'mareckova@sutb.cz',
-
-    image: matulikovaImage,
+    image: mareckovaImage,
   },
 ];
 ---
